2013-11-07  Ondřej Bílka  <neleai@seznam.cz>

	[BZ #15374]
	* nss/getent.c (services_keys): Recognize services starting with digit.

2013-11-06  David S. Miller  <davem@davemloft.net>

	[BZ #15985]
	* sysdeps/sparc/sparc32/fpu/s_fdim.S (__fdim): Do not use fnegd
	on pre-v9 cpus, use a fnegs+fmovs sequence instead.

2013-11-06  Will Newton  <will.newton@linaro.org>

	* manual/memory.texi (Malloc Examples): Remove register
	keyword from examples.

2013-11-04  Chris Leonard  <cjl@sugarlabs.org>

	* locale/iso-639.def: Correct Walaita (wal) and add Unami Delaware (unm).

2013-11-04  Joseph Myers  <joseph@codesourcery.com>

	* include/stdc-predef.h [__GCC_IEC_559] (__STDC_IEC_559__): Define
	depending on [__GCC_IEC_559 > 0].
	[__GCC_IEC_559_COMPLEX] (__STDC_IEC_559_COMPLEX__): Define
	depending on [__GCC_IEC_559_COMPLEX > 0].

2013-11-03  Chris Leonard  <cjl@sugarlabs.org>

	* locale/iso-639.def: Add Quechua, Southern (quz) and Silesian (szl)
	to iso-639.def.

2013-11-03  Ondřej Bílka  <neleai@seznam.cz>

	* elf/rtld.c: Remove unused NONTLS_INIT_TP.

2013-11-01  Ondřej Bílka  <neleai@seznam.cz>

	[BZ #16112]
	* malloc/malloc (malloc_info): Do not handle first bin as
	special case.

2013-11-01  Chris Leonard  <cjl@sugarlabs.org>

	* locale/iso-639.def: Add Central Nahuatl (nhn).

2013-11-01  Bruno Haible  <bruno@clisp.org>

	[BZ #7003]
	* manual/math.texi (BSD Random): Specify range upper bound as
	in POSIX.

2013-10-31  Chris Leonard  <cjl@sugarlabs.org>

	* locale/iso-639.def: Add Meadow Mari (mhr).

2013-10-31  Ondřej Bílka  <neleai@seznam.cz>

	[BZ #14752], [BZ #15763]
	* sysdeps/unix/sysv/linux/shm_open.c (shm_open, shm_unlink):
	Validate name.
	* rt/tst_shm.c: Add test for escaping directory.

2013-10-31  Andreas Schwab  <schwab@suse.de>

	[BZ #15917]
	* stdio-common/vfscanf.c (_IO_vfwscanf): Handle leading '0' not
	followed by 'x' as part of digit sequence.
	* stdio-common/tst-sscanf.c (double_tests2): New tests.
